--- a/src/net/vjdv/baz/om2/Inicio.fxml
+++ b/src/net/vjdv/baz/om2/Inicio.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.91" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.vjdv.baz.om2.InicioController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.91" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.vjdv.baz.om2.InicioController">
     <children>
       <MenuBar layoutX="27.0" layoutY="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
@@ -47,6 +47,11 @@
             <items>
               <MenuItem mnemonicParsing="false" onAction="#agregarProcedimiento" text="Agregar procedimiento" />
                   <MenuItem mnemonicParsing="false" onAction="#agregarTabla" text="Agregar tabla" />
+                  <MenuItem mnemonicParsing="false" onAction="#filtrar" text="Filtrar">
+                     <accelerator>
+                        <KeyCodeCombination alt="UP" code="F" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                     </accelerator>
+                  </MenuItem>
             </items>
           </Menu>
             <Menu mnemonicParsing="false" text="Conexiones">
@@ -78,7 +83,6 @@
                       <TableColumn fx:id="colSpNombre" maxWidth="200.0" minWidth="120.0" prefWidth="120.0" text="Objeto" />
                         <TableColumn fx:id="colSpMap" maxWidth="200.0" minWidth="150.0" prefWidth="150.0" text="sqlMap" />
                         <TableColumn fx:id="colSpDesc" minWidth="200.0" prefWidth="200.0" text="Descripción" />
-                        <TableColumn fx:id="colSpUri" minWidth="200.0" prefWidth="75.0" text="Archivo" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
