Se corrige error en commit y se agrega función de comparar local con original
git-svn-id: file:///var/svn/om2@10 b4973f56-3e5f-4244-950f-7780c0fbacc9

--- a/src/net/vjdv/baz/om2/Inicio.fxml
+++ b/src/net/vjdv/baz/om2/Inicio.fxml
@@ -119,6 +119,7 @@
                                 <items>
                                   <MenuItem mnemonicParsing="false" onAction="#svnUpdate" text="Update" />
                                     <MenuItem mnemonicParsing="false" onAction="#svnCommit" text="Commit" />
+                                    <MenuItem mnemonicParsing="false" onAction="#svnComparaCambios" text="Comparar con base" />
                                     <SeparatorMenuItem mnemonicParsing="false" />
                                     <MenuItem mnemonicParsing="false" onAction="#svnUpdateAll" text="Update todo" />
                                     <MenuItem mnemonicParsing="false" onAction="#svnCommitAll" text="Commit todo" />
