Soporte para archivos recientes
git-svn-id: file:///var/svn/om2@16 b4973f56-3e5f-4244-950f-7780c0fbacc9

--- a/src/net/vjdv/baz/om2/Inicio.fxml
+++ b/src/net/vjdv/baz/om2/Inicio.fxml
@@ -44,7 +44,7 @@
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem mnemonicParsing="false" onAction="#ayuda" text="Ayuda">
                      <accelerator>
-                        <KeyCodeCombination alt="ANY" code="COMPOSE" control="UP" meta="UP" shift="UP" shortcut="UP" />
+                        <KeyCodeCombination alt="ANY" code="F1" control="UP" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator>
                   </MenuItem>
             </items>
