Capacidad de ver dependencias con SQL
git-svn-id: file:///var/svn/om2@18 b4973f56-3e5f-4244-950f-7780c0fbacc9

--- a/src/net/vjdv/baz/om2/Inicio.fxml
+++ b/src/net/vjdv/baz/om2/Inicio.fxml
@@ -121,6 +121,7 @@
                                 <items>
                                     <MenuItem mnemonicParsing="false" onAction="#guardarDesdeServidor" text="Guardar versión del servidor" />
                                     <MenuItem mnemonicParsing="false" onAction="#compararSP" text="Comparar local con servidor" />
+                                    <MenuItem mnemonicParsing="false" onAction="#dependenciasSql" text="Ver dependencias" />
                                 </items>
                               </Menu>
                               <SeparatorMenuItem mnemonicParsing="false" />
@@ -155,7 +156,9 @@
                           <items>
                               <MenuItem mnemonicParsing="false" onAction="#copiarNombreTabla" text="Copiar nombre" />
                             <MenuItem mnemonicParsing="false" onAction="#editarTabla" text="Editar" />
+                              <SeparatorMenuItem mnemonicParsing="false" />
                               <MenuItem mnemonicParsing="false" onAction="#verDependenciasTb" text="Ver dependencias" />
+                              <MenuItem mnemonicParsing="false" onAction="#dependenciasSql" text="Ver dependencias (SQL)" />
                           </items>
                         </ContextMenu>
                      </contextMenu>
