Unir archivos en uno solo
git-svn-id: file:///var/svn/om2@21 b4973f56-3e5f-4244-950f-7780c0fbacc9

--- a/src/net/vjdv/baz/om2/Inicio.fxml
+++ b/src/net/vjdv/baz/om2/Inicio.fxml
@@ -64,6 +64,7 @@
                         <KeyCodeCombination alt="UP" code="B" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator>
                   </MenuItem>
+                  <MenuItem mnemonicParsing="false" onAction="#joinFiles" text="Unir archivos" />
             </items>
           </Menu>
             <Menu mnemonicParsing="false" text="Conexiones">
