ClearCase copy and compare with winmerge

--- a/src/net/vjdv/baz/om2/Inicio.fxml
+++ b/src/net/vjdv/baz/om2/Inicio.fxml
@@ -105,6 +105,7 @@
                                 <items>
                                     <MenuItem mnemonicParsing="false" onAction="#abrirProcedimiento" text="Abrir archivo" />
                                   <MenuItem mnemonicParsing="false" onAction="#abrirUbicacion2" text="Abrir ubicación del archivo" />
+                                  <MenuItem mnemonicParsing="false" onAction="#compararSPCC" text="Comparar con local" />
                                     <Menu mnemonicParsing="false" text="Copiar de...">
                                       <items>
                                           <MenuItem mnemonicParsing="false" onAction="#copiarToClearCase" text="local a directorio ClearCase" />
